# neuralnetwork

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Network.cpp  Network.h  README.md  baba  boundingbox.py  bparams.txt  build.ninja  bunu.txt  cmake_install.cmake  cnn  derrunner.py  dif.txt  fully_connected  hyperparams.cpp  includes.h  inyourmom.txt  layer.cpp  main.cpp  misc.cpp  mnist_test_normalized.data  mnist_train_normalized.data  net.txt  net1.out  net2.out  net3.out  net4.out  neuralnetwork  neuralnetwork.py  normalizer.py  number.data  numberreader.py  numberreader.spec  runner.out  sklav.sh  sklav2.sh  test.py
.cmake/api/v1/reply/: cache-v2-ff4104f737db25fae74c.json  (+4 more)
bf/: README.md
compare/: CPU.txt  CPU_n_squared.txt  CPU_two_hidden.txt  GPU.txt  GPU_AtmoicAdd.txt  GPU_double.txt  GPU_n_squared.txt  GPU_two_hidden.txt  plot.py
networks/: net1.out  net1.txt  net10.out  net10.txt  net2.out  net2.txt  net3.out  net3.txt  net4.out  net4.txt  net5.out  net5.txt  net6.out  net6.txt  net7.out  net7.txt  net8.out  net8.txt  net9.out  net9.txt  progress.sh
params/: avg.sh  params0.out  params1.out  params2.out  params3.out  params4.out  params5.out  params6.out  params7.out  params8.out  params9.out
test/: compilePy.sh  neuralnetwork.py  normalizer.py  numberreader.py
train/: Network.cpp  Network.cu  Network.h  cnn  compileParams.sh  debug.cu  evalAtomicAdd.cu  findBestParams.py  fully_connected  includes.h  layer.cpp  layer.cu  main.cpp  main.cu  misc.cpp  misc.cu  runFindBestParams.sh  runNetworks.sh  timeToSizeData.sh
